Fix category badge in dark mode

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -126,12 +126,7 @@ nav.post-controls button.has-like {
   color: #08c;
 }
 
-.badge-wrapper.bullet span.badge-category {
-  color: #333 !important;
-}
-
 .creator .badge-wrapper.bullet span.badge-category {
-  color: #888 !important;
   margin-top: -2px;
 }
 
